# phylosmith

./: .Rbuildignore  .Rhistory  .Rprofile  .gitignore  .travis.yml  DESCRIPTION  Dockerfile  NAMESPACE  Notes.txt  README.md  cleanup  configure  configure.ac  doc_elements.txt  makefile
JOSS_paper/: paper.bib  paper.md  phylosmith_release.md
R/: Correlations.R  FastCoOccur.R  FastCoOccur_rho.R  Networks.R  RcppExports.R  abundance_heatmap.R  abundance_lines.R  alpha_diversity_graph.R  argument_rules.R  bootstrap_rho.R  classify_ARG_codes.R  classify_ARGs.R  co_occurrence.R  co_occurrence_network.R  combine_treatments.R  common_taxa.R  concatenate_treatments.R  conglomerate_samples.R  conglomerate_taxa.R  curate_co_occurrence.R  curate_cooccurrence.R  data_analytics.R  data_parsing.R  data_wrangling.R  datasets.R  dendrogram_phyloseq.R  diversity.R  find_common_taxa.R  find_phyloseq_generalists.R  find_unique_genes.R  find_unique_taxa.R  graphs.R  graphs_phyloseq_ggplot.R  histogram_permuted_rhos.R  ineternal.R  internal.R  library_size.R  melt_phyloseq.R  merge_ASVs.R  merge_treatments.R  (+33 more)
data/: ia_lakes.rda  mock_phyloseq.rda  mock_phyloseq_2.rda  soil_column.rda
doc/: phylosmith.Rmd  phylosmith.html
docs/: LICENSE-text.html  _site.yml  analytics.html  authors.html  calculations.Rmd  calculations.html  data_parsing.html  data_wrangling.html  graphics.html  graphs.Rmd  graphs.html  index.Rmd  index.html  networks.html  pkgdown.yml  wrangling.html
inst/: NEWS
man/: CI_ellipse.Rd  Correlation.Rd  FastCoOccur.Rd  FastCoOccur_rho.Rd  abundance_heatmap.Rd  abundance_heatmap_ggplot.Rd  abundance_lines.Rd  abundance_lines_ggplot.Rd  alpha_diversity_graph.Rd  arrange_co_occurrence_table.Rd  assign_rank.Rd  bin.Rd  bootstrap_rho.Rd  change_labels.Rd  check_TaR.Rd  check_index_classification.Rd  check_index_treatment.Rd  check_numeric_classification.Rd  check_numeric_treatment.Rd  classify_ARG_class.Rd  classify_ARG_classes.Rd  classify_ARG_genes.Rd  classify_ARG_mechanisms.Rd  co_occurrence.Rd  co_occurrence_Rcpp.Rd  co_occurrence_network.Rd  co_occurrence_rho.Rd  co_occurrence_rho_Rcpp.Rd  combine_treatments.Rd  common_taxa.Rd  concatenate_treatments.Rd  conglomerate_samples.Rd  conglomerate_taxa.Rd  create_palette.Rd  curate_co_occurrence.Rd  curate_cooccurrence.Rd  dendrogram_phyloseq.Rd  find_common_taxa.Rd  find_generalists.Rd  find_unique_taxa.Rd  (+48 more)
src/: Makevars  (+14 more)
(+118 files in other folders)
